fixed list item spacing

--- a/personalstyle.css
+++ b/personalstyle.css
@@ -47,7 +47,7 @@
 	ul{
 		margin-left: 10%;
 		margin-right: 10%;
-		padding: 20px;
+		padding: 10px;
 		font-size: 22px;
 		font-weight: bold;
 		line-height: 110%;
